--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
           <h2>مـن نـحـن</h2>
-          <p style="text-align:justify">ركز بحثى، مصرى، متخصص فى مساعدة الدارسين فى المراحل التعليمية المختلفة، وفى تخصصات عدة أهمها: العلوم السياسية والعلاقات الدولية، القانون، الإدارة العامة،و إدارة الأعمال، والاقتصاد، وعلم الاجتماع وعلم النفس. ويضم المركز نخبة  من أبرز الباحثين المصريين الذين لا يألون جهدًا فى تقديم المشورة، والتوجيه العلمى، رغبة منهم فى إثراء الحقول الأكاديمية.</p>
+          <p style="text-align:justify">مركز بحثى، مصرى، متخصص فى مساعدة الدارسين فى المراحل التعليمية المختلفة، وفى تخصصات عدة أهمها: العلوم السياسية والعلاقات الدولية، القانون، الإدارة العامة،و إدارة الأعمال، والاقتصاد، وعلم الاجتماع وعلم النفس. ويضم المركز نخبة  من أبرز الباحثين المصريين الذين لا يألون جهدًا فى تقديم المشورة، والتوجيه العلمى، رغبة منهم فى إثراء الحقول الأكاديمية.</p>
           <h3>لـمـاذا نـحـن</h3>
           <div class="list-style">
             <div >
