--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
       </div>
       <div class="contact-item">
         <p><span><i class="fa fa-phone"></i> Phone</span> 20-115-380-7157+</p>
+        <p><span><i class="fa fa-email"></i> Email</span> educationalconsultancycairo@gmail.com</p>          
       </div>
           <div class="social">
           <ul>
